@@ -43,11 +43,11 @@ GtkWidget *winlist_page_new (void)
     GdkPixbuf *pixbuf;
 
     /* Load the icons and scale them */
-    pixbuf = gdk_pixbuf_new_from_file (PIXMAPSDIR "/team.png",  NULL);
+    pixbuf = gdk_pixbuf_new_from_file (GTETPIXMAPSDIR "/team.png",  NULL);
     team_icon = gdk_pixbuf_scale_simple (pixbuf, 24, 24, GDK_INTERP_BILINEAR);
     gdk_pixbuf_unref (pixbuf);
     
-    pixbuf = gdk_pixbuf_new_from_file (PIXMAPSDIR "/alone.png", NULL);
+    pixbuf = gdk_pixbuf_new_from_file (GTETPIXMAPSDIR "/alone.png", NULL);
     alone_icon = gdk_pixbuf_scale_simple (pixbuf, 24, 24, GDK_INTERP_BILINEAR);
     gdk_pixbuf_unref (pixbuf);
 
