@@ -1,3 +1,11 @@
+2003-06-08  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/Makefile.am (GTETPIXMAPSDIR): Define as
+	$(datadir)/pixmaps/gtetrinet.
+	(PIXMAPSDIR): Change to $(datadir)/pixmaps.
+	* src/winlist.c (winlist_page_new): Use GTETPIXMAPSDIR instead of
+	PIXMAPSDIR.
+
 2003-06-07  Jordi Mallach  <jordi@sindominio.net>
 
 	* NEWS: Update for 0.7.2.
